# pythonpackagecookie

./: .editorconfig  CHANGELOG.md  Makefile  README.rst  bitbucket-pipelines.yml  cookiecutter.json  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
docs/: conf.py  tutorial.rst
tests/: test_bake_project.py
{{cookiecutter.project_slug}}/: .coveragerc  MANIFEST.in  Makefile  README.rst  bitbucket-pipelines.yml  docker-compose.yml  envvars.yml  pip.conf  pylintrc  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
{{cookiecutter.project_slug}}/.buildkite/: pipeline.yml
{{cookiecutter.project_slug}}/docs/: conf.py  index.rst  installation.rst
{{cookiecutter.project_slug}}/scripts/: build_project.sh  unit_tests.sh
{{cookiecutter.project_slug}}/tests/: test_cli.py  test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py  _version.py
