[metadata]
description-file = README.rst

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = _version.py
versionfile_build = _version.py
tag_prefix = ''
parentdir_prefix = ''

[yapf]
based_on_style = google
split_before_logical_operator = true
column_limit = 120
